# pytest-total-duration

./: .gitignore  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml  tox.ini
tests/: test_plugin.py
