
[tool.poetry]
name = "pytest_total_duration"
version = "0.1.0"
description = "A pytest plugin that captures total duration of each item"
authors = ["symonk <jackofspaces@gmail.com>"]

[tool.poetry.plugins.pytest11]
pytest_total_duration = "pytest_total_duration.plugin"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "7.1.2"

[tool.poetry.dev-dependencies]
tox = "^3.25.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
codecov = "^2.1.12"
mkdocs = "^1.3.1"
mkdocs-material = "^8.3.9"
coverage = "^6.4.2"
towncrier = "^21.9.0"
poetryup = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:RequestsDependencyWarning:"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'True'
force_grid_wrap = 0
use_parentheses = 'True'
ensure_newline_before_comments = 'True'
line_length = 120
force_single_line = 'True'
known_first_party = 'pytest_total_duration'
default_section = 'THIRDPARTY'
forced_separate = 'tests'
skip = '.tox,.eggs,ci/templates'

[tool.mypy]
mypy_path = '/pytest_total_duration'
check_untyped_defs = 'True'
disallow_any_generics = 'True'
ignore_missing_imports = 'False'
show_error_codes = 'True'
strict_equality = 'True'
warn_redundant_casts = 'True'
warn_return_any = 'False'
warn_unreachable = 'True'
warn_unused_configs = 'True'
no_implicit_reexport = 'False'
ignore_errors = 'False'

[tool.black]
target-version = ['py310']
line-length = 120

[tool.flake8]
# flake8 does not currently support pyproject.toml (handle via pre-commit directly).
